# SG_Send__CLI

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: local_vault_server.py
sg_send_cli/api/: API__Transfer.py  Transfer__Envelope.py  Vault__API.py  Vault__API__In_Memory.py  Vault__Backend.py  Vault__Backend__API.py  Vault__Backend__Local.py
sg_send_cli/cli/: CLI__Credential_Store.py  CLI__Main.py  CLI__PKI.py  CLI__Progress.py  CLI__Token_Store.py  CLI__Vault.py  __init__.py
sg_send_cli/crypto/: PKI__Crypto.py  Vault__Crypto.py  Vault__Key_Manager.py
sg_send_cli/objects/: Vault__Commit.py  Vault__Inspector.py  Vault__Object_Store.py  Vault__Ref_Manager.py
sg_send_cli/pki/: PKI__Key_Store.py  PKI__Keyring.py
sg_send_cli/safe_types/: Enum__Batch_Op.py  Enum__Branch_Type.py  Enum__Provenance_Mode.py  Safe_Str__Author_Key_Id.py  Safe_Str__Base64_Data.py  Safe_Str__Base_URL.py  Safe_Str__Batch_Op.py  Safe_Str__Branch_Id.py  Safe_Str__Branch_Name.py  Safe_Str__Commit_Message.py  Safe_Str__Content_Hash.py  Safe_Str__Content_Type.py  Safe_Str__Encrypted_Value.py  Safe_Str__File_Id.py  Safe_Str__ISO_Timestamp.py  Safe_Str__Index_Id.py  Safe_Str__Key_Fingerprint.py  Safe_Str__Key_Id.py  Safe_Str__Object_Id.py  Safe_Str__PEM_Key.py  Safe_Str__Pending_Id.py  Safe_Str__Ref_Id.py  Safe_Str__Schema_Version.py  Safe_Str__Secret_Key.py  Safe_Str__Signature.py  Safe_Str__Vault_Path.py  Safe_Str__Write_Key.py  Safe_UInt__Key_Size.py  Safe_UInt__Lock_Timeout.py  Safe_UInt__Timestamp.py
sg_send_cli/schemas/: Schema__Batch_Operation.py  Schema__Batch_Request.py  Schema__Branch_Index.py  Schema__Branch_Meta.py  Schema__Change_Pack.py  Schema__Local_Config.py  Schema__Object_Commit.py  Schema__Object_Ref.py  Schema__Object_Tree.py  Schema__Object_Tree_Entry.py  Schema__PKI_Key_Pair.py  Schema__PKI_Public_Key.py  Schema__Remote_Config.py  Schema__Secret_Entry.py  Schema__Tracking_State.py  Schema__Transfer_File.py  Schema__Vault_Config.py  Schema__Vault_Policy.py
sg_send_cli/secrets/: Secrets__Store.py
sg_send_cli/sync/: Vault__Bare.py  Vault__Batch.py  Vault__Branch_Manager.py  Vault__Change_Pack.py  Vault__Components.py  Vault__Fetch.py  Vault__GC.py  Vault__Legacy_Guard.py  Vault__Merge.py  Vault__Remote_Manager.py  Vault__Storage.py  Vault__Sync.py
team/decisions/: 2026-03-14__vault_v2_architecture_decisions.md
team/explorer/architect/: v0.13.16__review__cli-expansion.md  v0.13.20__review__commit-merge-branch-model.md  v0.13.30__review__03-12-briefs.md  v0.13.30__review__03-13-revised-architecture.md  v0.14.0__review__cloneless-vault-access.md  v0.15.0__review__bare-vaults-credential-mgmt.md  v0.15.0__review__sealed-vaults-credential-mgmt.v1.md  (+1 more)
team/villager/: CLAUDE.md
tests/: conftest.py
tests/integration/: conftest.py  test_Vault__Batch__Integration.py  test_Vault__Integration.py  test_Vault__Local_Server.py
tests/qa/: helpers.py  test_QA__Scenario_1__Solo_Workflow.py  test_QA__Scenario_2__Two_User_Collab.py  test_QA__Vault_Init_Walkthrough.py  test_QA__Vault_Walkthrough.py
(+141 files in other folders)
