[tool.poetry]
name        = "sg-send-cli"
version     = "v0.7.1"
description = "CLI tool for syncing encrypted vaults with SG/Send Transfer API"
readme      = "README.md"
license     = "Apache-2.0"
authors     = ["The Cyber Boardroom"]
keywords    = ["sg-send", "vault", "encryption", "cli", "sync"]
homepage    = "https://github.com/the-cyber-boardroom/SG_Send__CLI"
repository  = "https://github.com/the-cyber-boardroom/SG_Send__CLI"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
packages = [{ include = "sg_send_cli" }]

[tool.poetry.dependencies]
python       = ">=3.11"
osbot-utils  = ">=3.70.0"
cryptography = { version = "v0.7.1", optional = true }

[tool.poetry.extras]
crypto = ["cryptography"]


[tool.poetry.group.dev.dependencies]
pytest     = ">=8.0"
pytest-cov = ">=5.0"

[tool.poetry.scripts]
sg-send-cli = "sg_send_cli.cli:main"

[build-system]
requires      = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths        = ["tests"]
addopts          = "-v --tb=short --ignore=tests/qa"
python_files     = "test_*.py"
python_classes   = "Test_*"
python_functions = "test_*"

[tool.coverage.run]
source = ["sg_send_cli"]
omit   = ["tests/*"]

[tool.coverage.report]
show_missing = true